config_setting(
    name = "linux",
    constraint_values = ["@platforms//os:linux"],
)
config_setting(
    name = "macos",
    constraint_values = ["@platforms//os:osx"],
)
config_setting(
    name = "windows",
    constraint_values = ["@platforms//os:windows"],
)

cc_binary(
    name = "teensy_loader_cli",
    srcs = ["teensy_loader_cli.c"],
    copts = [
        "-O2",
        "-Wall",
        "-Wextra",
    ] + select({
        ":linux":   ["-DUSE_LIBUSB"],
        ":macos":   ["-DUSE_APPLE_IOKIT"],
        ":windows": ["-DUSE_WIN32"],
        "//conditions:default": [],
    }),
    linkopts = select({
        ":linux":   ["-lusb"],
        ":macos":   [
            "-framework", "IOKit",
            "-framework", "CoreFoundation",
        ],
        ":windows": ["-lhid", "-lsetupapi", "-lwinmm"],
        "//conditions:default": [],
    }),
    visibility = ["//visibility:public"],
)